added code to html and css

--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
 
     <!-- portfolio container -->
     <section class="page-section" id="work">
-      <h2>Work</h2>
-    </section>
-    <section class="grid">
-      <div id="project1" class="gridarea">
-        <div>placeholder</div>
-      </div>
-      <div id="project2" class="gridarea">
-        <div>placeholder</div>
-      </div>
-      <div id="project3">
-        <div>placeholder</div>
-      </div>
-    </section>
+      <h2 id="workheading">Work</h2>
     
+    <section class="grid">
+      <div id="project1" class="gridarea" onclick="window.open('_blank')">
+        <div>placeholder</div>
+      </div>
+      <div id="project2" class="gridarea" onclick="window.open('_blank')">
+        <div>placeholder</div>
+      </div>
+      <div id="project3" onclick="window.open('_blank')">
+        <div>placeholder</div>
+      </div>
+    </section>
+    </section>
 
     <!-- contact -->
     <section class="page-section contact" id="contact">
